[metadata]
name = swype
version = 0.1.1
author = Lekan Akanbi
author_email = lakanbi37@gmail.com
description = Swype (Previously Wave-Pay) is a Python package that seamlessly allow merchants accept payments on their Python based web apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lakanbi37/Swype
project_urls =
    Bug Tracker = https://github.com/Lakanbi37/Swype/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = true
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    httpx
    requests
    pycryptodome

[options.packages.find]
where = src